# tcc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  appveyor.yml  test.tcb
benchmark/: CMakeLists.txt
benchmark/src/: bm_compile.cpp  bm_factorial.cpp  bm_fibonacci.cpp  bm_math_addition.cpp  bm_math_factorial.cpp  bm_math_fibonacci.cpp
cmake/: tccCodeCoverage.cmake  tccCompilerOptions.cmake  tccCompilerWarnings.cmake  tccConan.cmake  tccThreads.cmake
docs/: CMakeLists.txt
examples/: complex_function_call.tcc  complex_nested_expression.tcc  error_func_parse.tcc  error_var_undeclared.tcc  function_call.tcc  main.tcc  simple_conditional.tcc  simple_expression.tcc  simple_function_call.tcc  simple_minimal.tcc
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/tcc/: core.hpp
lib/core/tcc/core/: binary_format.cpp  binary_format.hpp  byte_code.cpp  byte_code.hpp  core.hpp  testing.hpp  variant.hpp  warning.hpp
lib/core/test/: CMakeLists.txt  test_binary_format.cpp
lib/tcc/: tcc.hpp
lib/tcc/compiler/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.hpp  parser_x3.hpp
lib/tcc/compiler_old/: ast.hpp  lexer.hpp  parser.hpp  parser_x3.hpp
lib/tcc/core/: warnings.hpp
lib/tcc/vm/: byte_code.cpp  byte_code.hpp  vm.cpp  vm.hpp
old_code/: test_lexer.cpp  test_vm.cpp
playground/: .clang-tidy  CMakeLists.txt  asio_client.cpp  asio_server.cpp  ast.cpp  ast.hpp  chat_message.hpp  grammar.cpp  grammar.hpp  lexer.hpp  lexer_test.cpp  main.cpp  main_boost_fusion.cpp  main_serialize.cpp  main_spirit_parser.cpp  main_test.cpp  parse_context.hpp  parser.hpp  parser_test.cpp  test.tcc  token.cpp  token.hpp
playground/spirit-qi-minic/: CMakeLists.txt
playground/spirit-qi-minic/src/: annotation.hpp  ast.hpp  compiler.cpp  compiler.hpp  expression.cpp  expression.hpp  expression_def.hpp  function.cpp  function.hpp  function_def.hpp  main.cpp  skipper.hpp  statement.cpp  statement.hpp  statement_def.hpp  vm.cpp  vm.hpp
playground/spirit_parser/: CMakeLists.txt  main.cpp
playground/spirit_parser/src/: compiler.cpp  compiler.hpp  error_handler.hpp  expression.hpp  expression_def.hpp  printer.hpp  statement_def.hpp  vm.hpp
src/: CMakeLists.txt  main.cpp  old_code.hpp
src/tcsl/: CMakeLists.txt
src/tcsl/tcsl/: assert.hpp  binary_format.cpp  binary_format.hpp  binary_format_test.cpp  byte_code.hpp  byte_code_test.cpp  file.hpp  file_test.cpp  tcsl.hpp  variant.hpp  warning.hpp
tcc/: CMakeLists.txt  main.cpp  main_neo.cpp
tcc-neo/: CMakeLists.txt  main.cpp
tcc-neo/tcc-neo/: parser_x3.cpp  parser_x3_test.cpp
tcc-neo/tcc-neo/parser/: common.cpp  common.hpp  error_handler.hpp  grammar.cpp  grammar_test.cpp  identifier.cpp  identifier.hpp  identifier_test.cpp  package.cpp  package.hpp  package_def.hpp  package_test.cpp
tcc/src/: ast.hpp  ast_adapted.hpp  common.hpp  compiler.cpp  compiler.hpp  config.hpp  error_handler.hpp  expression.cpp  expression.hpp  expression_def.hpp  printer.hpp  statement.cpp  statement.hpp  statement_def.hpp  vm.cpp  vm.hpp
tcc/src/asm/: assembly_generator.cpp  assembly_generator.hpp  generator.hpp
tcc/src/ir/: intermediate_representation.cpp  intermediate_representation.hpp  three_address_code.cpp  three_address_code.hpp
tcc/src/optimizer/: optimizer.cpp  optimizer.hpp
tcc/src/parser/: common.hpp  compiler.cpp  config.hpp  expression_def.hpp  statement.cpp  statement.hpp
tcc/tcc/: vm.cpp
tcc/tcc/asm/: asm_utils.cpp  asm_utils_test.cpp  assembly_generator.cpp  assembly_generator.hpp
tcc/tcc/cmd/: program_options.hpp
tcc/tcc/compiler/: compiler.hpp  compiler_test.cpp  options.hpp  program_options.hpp  program_options_test.cpp
tcc/tcc/ir/: generator.cpp  generator.hpp  instruction_set.hpp  intermediate_representation.cpp  intermediate_representation.hpp  statement.cpp  statement.hpp  three_address_code.cpp  three_address_code.hpp
tcc/tcc/optimizer/: optimizer.cpp  optimizer.hpp  optimizer_test.cpp
tcc/tcc/parser/: annotation.hpp  ast.hpp  ast_adapted.hpp  ast_printer.cpp  ast_printer.hpp  common_test.cpp  compiler.cpp  compiler.hpp  config.hpp  error_handler.hpp  expression.cpp  expression.hpp  expression_def.hpp  expression_test.cpp  function.cpp  function.hpp  function_def.hpp  function_test.cpp  parser.hpp  parser_test.cpp  skipper.hpp  statement.cpp  statement.hpp  statement_def.hpp  statement_test.cpp  testing.hpp
tcc/tcc/parser-qi/: annotation.hpp  ast.hpp  compiler.cpp  compiler.hpp  error_handler.hpp  expression.cpp  expression.hpp  expression_def.hpp  expression_test.cpp  function.cpp  function.hpp  function_def.hpp  skipper.hpp  statement.cpp  statement.hpp  statement_def.hpp  statement_test.cpp  vm.cpp  vm.hpp
tcc/test/: CMakeLists.txt  test_asm_generator.cpp  test_main.cpp  test_optimizer.cpp  test_parser_x3.cpp  test_ssa.cpp
tcc2/: CMakeLists.txt  main.cpp
tcc2/src/: expression.cpp  interpreter.cpp  printer.cpp  test.cpp
tcc2/src/fun/: annotation.hpp  ast.hpp  ast_adapted.hpp  common.hpp  config.hpp  error_handler.hpp  expression.hpp  expression_def.hpp  interpreter.hpp  printer.hpp
tcc2/test/: CMakeLists.txt
tcsl/: CMakeLists.txt
tcvm/: CMakeLists.txt  main.cpp  main_test.cpp
tcvm/src/tcvm/: examples.cpp  examples.hpp  program_options.hpp
tcvm/src/tcvm/vm/: byte_code.cpp  byte_code.hpp  vm.cpp  vm.hpp  vm_test.cpp
tcvm/tcvm/: examples.cpp  examples.hpp  program_options.hpp
tcvm/tcvm/vm/: vm.cpp  vm.hpp  vm_test.cpp
tcvm/test/: CMakeLists.txt  test_byte_code.cpp  test_main.cpp  test_vm.cpp
test/: CMakeLists.txt  test_ast.cpp  test_byte_code.cpp  test_lexer.cpp  test_parser.cpp  test_parser_x3.cpp  test_vm.cpp  test_warnings.cpp
test_data/: error_parse.tcc  error_var_duplicate.tcc  main.tcc  main_neo.tcc  multiple_functions.tcc  simple.tcc
tests/: CMakeLists.txt  integration_test.cpp
tsl/: CMakeLists.txt  main_test.cpp
tsl/tsl/: assert.hpp  binary_format.cpp  binary_format_test.cpp  byte_code.cpp  byte_code.hpp  byte_code_test.cpp  test_binary_format.cpp  testing.hpp  tsl.hpp  variant.hpp  warning.hpp
(+77 files in other folders)
